fixing alignment of buttons

--- a/client/src/Styles/FavouritesButton.css
+++ b/client/src/Styles/FavouritesButton.css
@@ -8,7 +8,7 @@
     height: 1.5em; /* Adjust the height as needed */
     padding: 5px 5px; /* Adjust the padding as needed */
     font-size:1.5em; 
-    margin-left: 4em;
+    margin-left: 5em;
     position: absolute;
     bottom: 20%;
 }
